tests/fixtures/invalid/BlankLineAfterLastInterfaceMethod.php
<?php

declare(strict_types=1);

namespace Invalid;

interface BlankLineAfterLastInterfaceMethod
{
    public function methodA(): void;

    public function methodB(): void;

}
